--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
-    "mysql2": "^3.6.0",
-    "sequelize": "^6.32.1"
+    "mysql2": "^3.6.0"
   },
   "engines": {
     "node": ">=14.0.0"
